Fixed table text overflow in css

--- a/app/src/App.css
+++ b/app/src/App.css
@@ -398,6 +398,7 @@ footer {
 /* Tables */
 .table-container {
   margin-bottom: 30px;
+  overflow-x: scroll;
 }
 
 .table-container h3 {
